examples/example_keyword_set.php
<?php

include "semor_api.php";

SEMOR::$token = "XXX";

// smazani/aktivovani slova podle idk - ID ze systmu SEMOR
$data = array(
	"idp"=>1,//povinny parametr, ID projektu v systmu SEMOR
	"keyword"=>array(
		"idk"=>array(
			123=>array("status"=>"N")
		)		
	)	
);

// smazani/aktivovani slova podle idv - ID z vlastniho systemu
$data = array(
	"idp"=>1,//povinny parametr, ID projektu v systmu SEMOR
	"keyword"=>array(
		"idv"=>array(
			258=>array("status"=>"N")
		)		
	)	
);


$result = SEMOR::SetKeyword($data);
if($result["status"] == 200){//zalozen novy projekt
	echo "Ve se uloilo v podku";
}else{
	//error
	print_r($result["error"]);
}
?>